Update Inscrições info

--- a/layouts/inscricoes/list.html
+++ b/layouts/inscricoes/list.html
@@ -4,9 +4,9 @@
 <section class="row td-box td-box--1 position-relative td-box--gradient td-box--height-auto">
 	<div class="container text-center td-arrow-down">
 		<span class="h4 mb-0">
-<h1>Inscrições fechadas!</h1>
+<h1>Inscrições abertas!</h1>
 
-<p>A próxima turma do curso está prevista para o segundo semestre de 2021! Quando as inscrições forem abertas, poderão ser feitas seguindo as instruções abaixo para preenchimento do formulário e pagamento via GRU! Esperamos por você!
+<p>A primeira turma do curso, com aulas entre 19 de Abril e 31 de Maio, está com as inscrições abertas! As inscrições podem ser feitas seguindo as instruções abaixo para preenchimento do formulário e pagamento via GRU! Esperamos por você!
 </span>
 	</div>
 </section>
