--- a/layouts/partials/inscricoes_links.html
+++ b/layouts/partials/inscricoes_links.html
@@ -6,22 +6,43 @@
 <p>		
 <p>Há valores diferenciados de inscrição de acordo com seu vínculo institucional e/ou modalidade de curso.
 <ul>
-<p><li><b>Estudante de Graduação</b>: 60 reais;</li>
-<p><li><b>Estudante de Pós-Graduação (Mestrado)</b>: 100 reais;</li>
-<p><li><b>Estudante de Pós-Graduação (Doutorado)</b>: 150 reais;</li>
-<p><li><b>Professor, pós-doutorando ou pesquisador de instituição pública</b>: 300 reais;</li>
-<p><li><b>Profissional externo</b>: 600 reais;</li>
+<p><li><b>Estudante de Graduação</b>: 100 reais;</li>
+<p><li><b>Estudante de Pós-Graduação (Mestrado)</b>: 150 reais;</li>
+<p><li><b>Estudante de Pós-Graduação (Doutorado)</b>: 250 reais;</li>
+<p><li><b>Professor, pós-doutorando ou pesquisador de instituição pública</b>: 500 reais;</li>
+<p><li><b>Profissional externo</b>: 1000 reais;</li>
 <p>
 </ul>
 <p>
-Serão disponibilizadas 30 vagas para a segunda turma do curso. Caso as 30 vagas sejam preenchidas, há uma <a href="https://forms.gle/ddmNQn6eBntGuUYg9">lista de espera</a> para possíveis desistências e avaliar a possibilidade de abertura de novas turmas.
+Serão disponibilizadas 40 vagas para a segunda turma do curso., assim distribuídas:
 <p>
-Em caso de desistência, <b><red>o reembolso será de 70% do valor da inscrição</red></b>, em função da existência de taxas administrativas.
+<ul>
+<p><li><b>Estudante de Graduação</b>: 10 vagas;</li>
+<p><li><b>Estudante de Pós-Graduação (Mestrado)</b>: 10 vagas;</li>
+<p><li><b>Estudante de Pós-Graduação (Doutorado)</b>: 10 vagas;</li>
+<p><li><b>Professor, pós-doutorando ou pesquisador de instituição pública ou profissional externo</b>: 10 vagas;</li>
+<p>
+</ul>
+<p>
+ As vagas não ocupadas em uma categoria após o prazo final das inscrições serão remanejadas para as demais categorias, atendendo a ordem da <a href="https://forms.gle/ddmNQn6eBntGuUYg9">lista de espera</a>. Caso as 40 vagas sejam preenchidas, também é possível preencher a <a href="https://forms.gle/ddmNQn6eBntGuUYg9">lista de espera</a> para possíveis desistências e avaliar a possibilidade de abertura de novas turmas.
+<p>
+Em caso de desistência, <b><red>o reembolso será de somente 70% do valor da inscrição</red></b>, em função da existência de taxas administrativas.
 <p>
 <p>
-<h2>Formulário de Inscrição</h2>
+<h2>Formulários de Inscrição</h2>
 <p>
-<p>Para iniciar sua inscrição, clique <a href="https://forms.gle/KdQ4Fxqc6f29FQ5X9">aqui</a> para preencher o formulário com seus dados. Após o preenchimento do formulário, prossiga e realize a emissão e pagamento da GRU. Somente realize a emissão e pagamento de GRU <b>APÓS</b> preencher o formulário do Google Forms, em função do limite de vagas na turma.
+<p>Para iniciar sua inscrição, clique no formulário correspondente à sua categoria de participação e preencha com seus dados:
+<p>
+<ul>
+<p><li><b>Estudante de Graduação</b>: clique <a href="https://forms.gle/KdQ4Fxqc6f29FQ5X9">aqui</a></li>
+<p><li><b>Estudante de Pós-Graduação (Mestrado)</b>: clique <a href="https://forms.gle/KdQ4Fxqc6f29FQ5X9">aqui</a></li>
+<p><li><b>Estudante de Pós-Graduação (Doutorado)</b>:clique <a href="https://forms.gle/KdQ4Fxqc6f29FQ5X9">aqui</a></li>
+<p><li><b>Professor, pós-doutorando ou pesquisador de instituição pública</b>:clique <a href="https://forms.gle/KdQ4Fxqc6f29FQ5X9">aqui</a></li>
+<p><li><b>Profissional externo</b>:clique <a href="https://forms.gle/KdQ4Fxqc6f29FQ5X9">aqui</a></li>
+<p>
+</ul>
+<p>
+ Após o preenchimento do formulário, prossiga e realize a emissão e pagamento da GRU. Somente realize a emissão e pagamento de GRU <b>APÓS</b> preencher o formulário do Google Forms e receber a confirmação de preenchimento do formulário por e-mail, em função do limite de vagas na turma e também do limite de vagas por categoria de inscrição.
 </div>
 <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
 <h2>Pagamento</h2>
@@ -49,7 +70,7 @@ Em caso de desistência, <b><red>o reembolso será de 70% do valor da inscriçã
 </ul>
 <p>
 <p>Gerar PDF ou baixar PDF, e realizar pagamento do GRU em dinheiro em uma agência do Banco do Brasil, ou também via aplicativo do Banco do Brasil. 
-<p>Após realizar o pagamento, envie o comprovante para o e-mail <b>cursodefilogenia.ufpr@gmail.com</b> para receber a confirmação de sua inscrição. Caso tenha optado por modalidade de inscrição que tenha um valor diferenciado em função de vínculo institucional e/ou educacional, enviar também comprovante do tipo de vínculo junto ao comprovante de pagamento.
+<p>Após realizar o pagamento, envie o comprovante para o e-mail <b>cursogenomicaegenetica.ufpr@gmail.com</b> para receber a confirmação de sua inscrição. Caso tenha optado por modalidade de inscrição que tenha um valor diferenciado em função de vínculo institucional e/ou educacional, enviar também comprovante do tipo de vínculo junto ao comprovante de pagamento.
 
 
 </div>
