--- a/layouts/inscricoes/list.html
+++ b/layouts/inscricoes/list.html
@@ -6,7 +6,7 @@
 		<span class="h4 mb-0">
 <h1>Inscrições abertas!</h1>
 
-<p>A primeira turma do curso, com aulas entre 19 de Abril e 31 de Maio, está com as inscrições abertas! As inscrições podem ser feitas seguindo as instruções abaixo para preenchimento do formulário e pagamento via GRU! Esperamos por você!
+<p>A primeira turma do curso, com aulas entre 19 de Abril e 31 de Maio, está com as inscrições abertas até o dia 10 de Abril! As inscrições podem ser feitas seguindo as instruções abaixo para preenchimento do formulário e pagamento via GRU! Esperamos por você!
 </span>
 	</div>
 </section>
