--- a/layouts/partials/inscricoes_links.html
+++ b/layouts/partials/inscricoes_links.html
@@ -36,9 +36,8 @@ Em caso de desistência, <b><red>o reembolso será de somente 70% do valor da in
 <ul>
 <p><li><b>Estudante de Graduação</b>: clique <a href="https://forms.gle/KdQ4Fxqc6f29FQ5X9">aqui</a></li>
 <p><li><b>Estudante de Pós-Graduação (Mestrado)</b>: clique <a href="https://forms.gle/KdQ4Fxqc6f29FQ5X9">aqui</a></li>
-<p><li><b>Estudante de Pós-Graduação (Doutorado)</b>:clique <a href="https://forms.gle/KdQ4Fxqc6f29FQ5X9">aqui</a></li>
-<p><li><b>Professor, pós-doutorando ou pesquisador de instituição pública</b>:clique <a href="https://forms.gle/KdQ4Fxqc6f29FQ5X9">aqui</a></li>
-<p><li><b>Profissional externo</b>:clique <a href="https://forms.gle/KdQ4Fxqc6f29FQ5X9">aqui</a></li>
+<p><li><b>Estudante de Pós-Graduação (Doutorado)</b>: clique <a href="https://forms.gle/KdQ4Fxqc6f29FQ5X9">aqui</a></li>
+<p><li><b>Professor, pós-doutorando, pesquisador de instituição pública ou profissional externo</b>: clique <a href="https://forms.gle/KdQ4Fxqc6f29FQ5X9">aqui</a></li>
 <p>
 </ul>
 <p>
