--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -17,7 +17,7 @@ $td-enable-google-fonts: true !default;
 
 // Theme colors
 
-$primary: #3ED930 !default;
+$primary: #1AAD13 !default;
 $primary-light: lighten($primary, 75%) !default;
 $secondary: #C79040 !default;
 $success: #3772FF !default;
@@ -25,7 +25,7 @@ $info: #A2BFE0 !default;
 $warning: #944E4D !default;
 $danger: #944E4D !default;
 $white: #fff !default;
-$light: #E2CDFA !default;
+$light: #BEE6BA !default;
 
 $dark: #292C61 !default;
 $blue: #72A1E5 !default;
