--- a/layouts/partials/inscricoes_links.html
+++ b/layouts/partials/inscricoes_links.html
@@ -34,10 +34,10 @@ Em caso de desistência, <b><red>o reembolso será de somente 70% do valor da in
 <p>Para iniciar sua inscrição, clique no formulário correspondente à sua categoria de participação e preencha com seus dados:
 <p>
 <ul>
-<p><li><b>Estudante de Graduação</b>: clique <a href="https://forms.gle/KdQ4Fxqc6f29FQ5X9">aqui</a></li>
-<p><li><b>Estudante de Pós-Graduação (Mestrado)</b>: clique <a href="https://forms.gle/KdQ4Fxqc6f29FQ5X9">aqui</a></li>
-<p><li><b>Estudante de Pós-Graduação (Doutorado)</b>: clique <a href="https://forms.gle/KdQ4Fxqc6f29FQ5X9">aqui</a></li>
-<p><li><b>Professor, pós-doutorando, pesquisador de instituição pública ou profissional externo</b>: clique <a href="https://forms.gle/KdQ4Fxqc6f29FQ5X9">aqui</a></li>
+<p><li><b>Estudante de Graduação</b>: clique <a href="https://forms.gle/JNESSJ1GxdphmoB17">aqui</a></li>
+<p><li><b>Estudante de Pós-Graduação (Mestrado)</b>: clique <a href="https://forms.gle/NEzgu9Zom3Nsjwdt7">aqui</a></li>
+<p><li><b>Estudante de Pós-Graduação (Doutorado)</b>: clique <a href="https://forms.gle/iHF7Zbw2ZZKDEePg8">aqui</a></li>
+<p><li><b>Professor, pós-doutorando, pesquisador de instituição pública ou profissional externo</b>: clique <a href="https://forms.gle/x9LptngEsZ6yg9Pq9">aqui</a></li>
 <p>
 </ul>
 <p>
