--- a/layouts/partials/inscricoes_links.html
+++ b/layouts/partials/inscricoes_links.html
@@ -9,7 +9,8 @@
 <p><li><b>Estudante de Graduação</b>: 100 reais;</li>
 <p><li><b>Estudante de Pós-Graduação (Mestrado)</b>: 150 reais;</li>
 <p><li><b>Estudante de Pós-Graduação (Doutorado)</b>: 250 reais;</li>
-<p><li><b>Professor, pós-doutorando ou pesquisador de instituição pública</b>: 500 reais;</li>
+<p><li><b>Pós-doutorando de instituição pública</b>: 400 reais;</li>
+<p><li><b>Professor ou pesquisador de instituição pública</b>: 500 reais;</li>
 <p><li><b>Profissional externo</b>: 1000 reais;</li>
 <p>
 </ul>
